// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`LabelText matches snapshot: enzyme.mount 1`] = `
<glamorous(span)>
  <span
    className="css-yengmq"
  >
    example
  </span>
</glamorous(span)>
`;

exports[`LabelText matches snapshot: enzyme.render 1`] = `
<span
  class="css-yengmq"
>
  example
</span>
`;

exports[`LabelText matches snapshot: enzyme.shallow 1`] = `
<span
  className="css-yengmq"
>
  example
</span>
`;
